calendar scroll overflow bug fixe

--- a/assets/css/nextjs-material-dashboard.css
+++ b/assets/css/nextjs-material-dashboard.css
@@ -67,7 +67,7 @@ body {
   margin: 0;
   font-family: Roboto, Helvetica, Arial, sans-serif;
   font-weight: 300;
-  line-height: 1em !important;
+  line-height: 1.2em !important;
   overflow-x: hidden;
 }
 
@@ -561,8 +561,7 @@ footer ul li a:hover {
 
 .fc-col-header-cell-cushion {
   font-family: "Roboto", sans-serif;
-  font-weight: 400;
-  color: rgb(90, 89, 117);
+  font-weight: 500;
 }
 .fc-button {
   font-family: "Roboto", sans-serif !important;
@@ -587,24 +586,4 @@ footer ul li a:hover {
 }
 .fc-event-title-container:hover {
   color: black;
-}
-
-.fc ::-webkit-scrollbar {
-  width: 4px;
-}
-
-/* Track */
-.fc ::-webkit-scrollbar-track {
-  box-shadow: inset 0 0 5px grey;
-}
-
-/* Handle */
-.fc ::-webkit-scrollbar-thumb {
-  background: black;
-  border-radius: 20px;
-}
-
-/* Handle on hover */
-.fc ::-webkit-scrollbar-thumb:hover {
-  background: #b30000;
 }
